<resources>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="app_name">Data Storage Demo</string>
    <string name="allow_notification_key">allow_notification_key</string>
    <string name="allow_mobile_data_key">allow_mobile_data_key</string>
    <string name="allow_screen_rotation_key">allow_screen_rotation_key</string>
    <string name="number_items_key">number_items_key</string>
    <string name="data_refresh_key">data_referesh_key</string>
</resources>